src/pages/Templates/components/FormEditor.module.scss
@import '~@sparkpost/matchbox/src/styles/config.scss';

.Panel, .EditorPanel {
  height: 100%;
  position: relative;
}

.EditorPanel {
  height: 600px;
  margin-top: spacing();

  @media screen and (min-width: breakpoint(medium)) {
    height: 100%;
    max-height: 100%;
    margin-top: 0;
  }
}

